Use List factory methods
RISDEV-0000