@@ -3,7 +3,6 @@ package de.bund.digitalservice.ris.norms.helper;
 import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.read.ListAppender;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -39,6 +38,6 @@ public class MemoryAppender extends ListAppender<ILoggingEvent> {
   }
 
   public List<ILoggingEvent> getLoggedEvents() {
-    return Collections.unmodifiableList(this.list);
+    return List.copyOf(this.list);
   }
 }
